<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.harj5_jaakaappitietokanta.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <EditText
                android:id="@+id/et_product_bought"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="22sp"
                android:hint="@string/bought"
                />

            <EditText
                android:id="@+id/et_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="22sp"
                android:hint="@string/product_name"
                />

            <EditText
                android:id="@+id/et_product_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="22sp"
                android:hint="@string/expiration"
                />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="22sp"
                android:hint="@string/description"
                />

            <Button
                android:id="@+id/bt_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/add"/>

            <Button
                android:id="@+id/bt_delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/delete"/>

        </GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_fridge_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/empty"
                />

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
